--- a/cytodata_aics/config/data/example_vae_dataloader_3d_all_classes.yaml
+++ b/cytodata_aics/config/data/example_vae_dataloader_3d_all_classes.yaml
@@ -18,7 +18,7 @@ loaders:
     column: 3d_image
     select_channels: ['bf', 'dna', 'membrane', 'structure', 'dna_segmentation', 'membrane_segmentation', 'struct_segmentation_roof']
     ome_zarr_level: 2
-    unsqueeze_first_dim: true
+    unsqueeze_first_dim: false
     dtype: float32
     transform:
       _partial_: true
