Get classifications callback

--- a/cytodata_aics/config/trainer/callbacks/vae.yaml
+++ b/cytodata_aics/config/trainer/callbacks/vae.yaml
@@ -7,3 +7,7 @@
   on_train: False
   on_val: False
   on_test: True
+  
+- _target_: cytodata_aics.vae_utils.GetClassifications
+  x_label: image
+  id_label: id
